fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -1,116 +1,136 @@
-
-
-* {
-    box-sizing: border-box;
+body {
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body {
-    font: arial, verdana, 'sans-serif', 16px, 1.5;
-    color: black;
-    line-height: 1.5;
-   
-}
-.container .cards .items img {
-    width: 100%;
-    aspect-ratio: 3:2;
-    object-fit: contain;
-}
-/* navigation bar  and header*/
-.navigation, .header, .header-container {
+#header, #nav-items{
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    padding: 0.7rem;
+}
+#nav-items li {
+    margin-right: 0.8rem;
+    list-style: none;
+}
+#nav-items a{
+    text-decoration: none;
+    color: #bababa;
+    font-weight: bold;
+}
+#nav-items a:hover {
+    color: #ffffff;
+    font-weight: bold;
+}
+#footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#header, #footer {
     background-color: #1F2937;
     color: #fff;
-    padding: 1.5rem;
-    line-height: 1.5;
 }
-#nav  {
+#menu-icon{
+    display: none;
+}
+/* ------------------------------------------------------- */
+.main{
     display: flex;
     justify-content: space-between;
-    list-style: none;
-    gap: 2rem;
-
-}
-#nav a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.3rem;
+    align-items: center;
+    font-size: large;
+    background-color: #3882F6;
+    color: #ffffff;
 }
 
-#nav a:hover {
-    background-color: #223a5d;
-    padding: 2rem;
-    border-radius: 1rem;
-    font-size: 1.5rem;
-    font-weight: 900;
+
+/* --------------------------cards list----------------------------- */
+.h2-random{
+    text-align: center;
 }
-/* random card section*/
-.container, 
-.cards,
-.items {
+#projects{
     display: flex;
-    padding: 1rem;
+    flex-flow:row wrap;
+    margin: 0.7rem;
+    gap: 0.7rem;
 }
-.container {
+.card {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-.container .cards {
-    flex-flow: row wrap;
     justify-content: space-between;
-
-}
-.items {
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    border: 5px solid #3882F6;
+    border-radius: .7rem;
     flex: 1;
-    
 }
-/* quotes section */
+p {
+    margin: 0.7rem;
+    text-align: justify;
+}
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius:  0.5rem 0.5rem 0 0;
+}
+
+/* --------------------------subscribe panel---------------------------- */
 .quotes {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 80rem;
-    height: 100%;
-    padding: 10rem 5rem;
     background-color: #E5E7EB;
     color: #1F2937;
-    font-size: 36px;
-    font-style: italic;
+    margin: 0;
+    padding: 0.7rem;
 }
-/* Sign up section */
+.quotes q em {
+    font-size:1.3rem;
+}
+/* --------------------------subscribe panel---------------------------- */
 .callToAction {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     background-color: #3882F6;
-    height: 10rem;
+    min-height: 10rem; 
     border-radius: 20px;
     margin: 30px 50px;
-    padding: 20px;
+    padding: 2rem;
     color: #ffffff;
+    gap: 2rem;
+    overflow: hidden; 
 }
-/* Sign up Button */
+
+/* Sign up button */
 button {
     border: 3px solid #ffffff;
     border-radius: 8px;
     padding: 10px 20px;
-    background-color: #3882F6 ;
+    background-color: #3882F6;
     font-weight: 900;
     color: #ffffff;
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-/* footer section */
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1F2937;
-    color: #fff;
-    padding: 1.4rem;
+
+/* ---------------------------------media query---------------------- */
+@media screen and (max-width :720px) {
+    #nav-items{
+        display: none;
+    }
+    #menu-icon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+
+    }
+    .main {
+        flex-direction: column;
+        justify-content: center;
+    }
 }
